--- a/src/NewBoxForm.css
+++ b/src/NewBoxForm.css
@@ -1,11 +1,12 @@
 #NewBoxForm {
-    width: 60vw;
+    width: 50vw;
     position: relative;
-    left: 20%;
+    left: 25%;
     text-align: center;
     border: 2px solid rgb(90, 90, 90);
     border-radius: 10px;
     padding: 2% 0;
+    margin-bottom: 10px;
 }
 
 input{
@@ -27,4 +28,5 @@ input[type=range] {
 
 .box {
     display: inline-block;
+    margin: 5px;
 }
